CalculatorParser.java
// Generated from Calculator.g4 by ANTLR 4.9
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CalculatorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, MUL=9, 
		DIV=10, ADD=11, SUB=12, EQUAL=13, DIFFERENT=14, SUP=15, SUP_EQ=16, INF=17, 
		INF_EQ=18, AND=19, OR=20, NOT=21, FININSTRUCTION=22, READLN=23, PRINTLN=24, 
		IF=25, ELSE=26, WHILE=27, RETURN=28, TYPE=29, IDENTIFIANT=30, ENTIER=31, 
		FLOTTANT=32, NEWLINE=33, UNMATCH=34;
	public static final int
		RULE_calcul = 0, RULE_decl = 1, RULE_fonction = 2, RULE_params = 3, RULE_args = 4, 
		RULE_instruction = 5, RULE_assignation = 6, RULE_whileStat = 7, RULE_ifElseStat = 8, 
		RULE_logical_expression = 9, RULE_condition = 10, RULE_block = 11, RULE_expr = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"calcul", "decl", "fonction", "params", "args", "instruction", "assignation", 
			"whileStat", "ifElseStat", "logical_expression", "condition", "block", 
			"expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'('", "')'", "','", "'true'", "'false'", "'{'", "'}'", 
			"'*'", "'/'", "'+'", "'-'", "'=='", "'!='", "'>'", "'>='", "'<'", "'<='", 
			"'and'", "'or'", "'not'", "';'", "'readln'", "'println'", "'if'", "'else'", 
			"'while'", "'return'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "MUL", "DIV", "ADD", 
			"SUB", "EQUAL", "DIFFERENT", "SUP", "SUP_EQ", "INF", "INF_EQ", "AND", 
			"OR", "NOT", "FININSTRUCTION", "READLN", "PRINTLN", "IF", "ELSE", "WHILE", 
			"RETURN", "TYPE", "IDENTIFIANT", "ENTIER", "FLOTTANT", "NEWLINE", "UNMATCH"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Calculator.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		// global variables count
		// used to pop all global variables later
		private int varg_count = 0;
		private int floatg_count = 0;
		
		// used to store the variables
		private TablesSymboles tablesSymboles = new TablesSymboles();
		
		// for use with "while" instruction
		private int _label = 0;
		
		private int nextLabel()
		{
			return _label++;
		}
		
		private int evalexpr(int x, int op, int y)
		{
			switch( op )
			{
				case MUL:
					return x * y;
				case DIV:
					return x / y;
				case ADD:
					return x + y;
				case SUB:
					return x -y;
				default:
					throw new UnsupportedOperationException("Unknown operation: " + op + "\n");
			}
		}
		
		private String makeinstruction(int op, String vartype)
		{
			switch( op )
			{
				case MUL:
					if( vartype.equals("int") )
					{
						return "MUL\n";
					}
					else if( vartype.equals("float") )
					{
						return "FMUL\n";
					}
				case DIV:
					if( vartype.equals("int") )
					{
						return "DIV\n";
					}
					else if( vartype.equals("float") )
					{
						return "FDIV\n";
					}
				case ADD:
					if( vartype.equals("int") )
					{
						return "ADD\n";
					}
					else if( vartype.equals("float") )
					{
						return "FADD\n";
					}
				case SUB:
					if( vartype.equals("int") )
					{
						return "SUB\n";
					}
					else if( vartype.equals("float") )
					{
						return "FSUB\n";
					}
				default:
					throw new UnsupportedOperationException("Unknown operation: " + op + "\n");
			}
		}
		
		// evaluate conditional expression
		private String evalcondition(int op, String vartype)
		{
			System.err.println("vartype: " + vartype);
			switch( op )
			{
				case EQUAL:
					if( vartype.equals("int") )
					{
						return "EQUAL\n";
					}
					else if( vartype.equals("float") )
					{
						return "FEQUAL\n";
					}
				case DIFFERENT:
					if( vartype.equals("int") )
					{
						return "NEQ\n";
					}
					else if( vartype.equals("float") )
					{
						return "FNEQ\n";
					}
				case SUP:
					if( vartype.equals("int") )
					{
						return "SUP\n";
					}
					else if( vartype.equals("float") )
					{
						return "FSUP\n";
					}
				case INF:
					if( vartype.equals("int") )
					{
						return "INF\n";
					}
					else if( vartype.equals("float") )
					{
						return "FINF\n";
					}
				case SUP_EQ:
					if( vartype.equals("int") )
					{
						return "SUPEQ\n";
					}
					else if( vartype.equals("float") )
					{
						return "FSUPEQ\n";
					}
				case INF_EQ:
					if( vartype.equals("int") )
					{
						return "INFEQ\n";
					}
					else if( vartype.equals("float") )
					{
						return "FINFEQ\n";
					}
				default:
					throw new UnsupportedOperationException("Unknown condition: " + op + "\n");
			}
		}
		
		public void incfloatg_count()
		{
			floatg_count++;
		}
		
		public int getfloatg_count()
		{
			return floatg_count;
		}
		
		public void incvarg_count()
		{
			varg_count++;
		}
		
		public int getvarg_count()
		{
			return varg_count;
		}

	public CalculatorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CalculContext extends ParserRuleContext {
		public String code;
		public DeclContext decl;
		public FonctionContext fonction;
		public InstructionContext instruction;
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(CalculatorParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(CalculatorParser.NEWLINE, i);
		}
		public List<FonctionContext> fonction() {
			return getRuleContexts(FonctionContext.class);
		}
		public FonctionContext fonction(int i) {
			return getRuleContext(FonctionContext.class,i);
		}
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public CalculContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_calcul; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculatorListener ) ((CalculatorListener)listener).enterCalcul(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculatorListener ) ((CalculatorListener)listener).exitCalcul(this);
		}
	}

	public final CalculContext calcul() throws RecognitionException {
		CalculContext _localctx = new CalculContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_calcul);

					((CalculContext)_localctx).code =  new String();
				
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(26);
					((CalculContext)_localctx).decl = decl();

								// declaration
								_localctx.code += ((CalculContext)_localctx).decl.code;
							
					}
					} 
				}
				setState(33);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}

						int entry = nextLabel();
						_localctx.code += "JUMP " + entry + "\n";
					
			setState(38);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(35);
					match(NEWLINE);
					}
					} 
				}
				setState(40);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}

						_localctx.code += "";
					
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE) {
				{
				{
				setState(42);
				((CalculContext)_localctx).fonction = fonction();

					  		_localctx.code += ((CalculContext)_localctx).fonction.code;
					  	
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(50);
				match(NEWLINE);
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}

				  		_localctx.code += "";
				  	

				  		_localctx.code += "LABEL " + entry + "\n";
				  	
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << SUB) | (1L << FININSTRUCTION) | (1L << READLN) | (1L << PRINTLN) | (1L << IF) | (1L << WHILE) | (1L << RETURN) | (1L << IDENTIFIANT) | (1L << ENTIER) | (1L << FLOTTANT))) != 0)) {
				{
				{
				setState(58);
				((CalculContext)_localctx).instruction = instruction();

				   			// instruction, eg. x = 5; 7 * 4;
				   			_localctx.code += ((CalculContext)_localctx).instruction.code;
				   		
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			_ctx.stop = _input.LT(-1);

			   			System.out.print(_localctx.code);
						for( int i = 0; i < getvarg_count(); ++i )
						{
							System.out.println("POP");
						}
						for( int i = 0; i < getfloatg_count(); ++i )
						{
							System.out.println("POPF");
						}
						System.out.println("HALT");
					
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public String code;
		public Token TYPE;
		public Token IDENTIFIANT;
		public ExprContext expr;
		public TerminalNode TYPE() { return getToken(CalculatorParser.TYPE, 0); }
		public TerminalNode IDENTIFIANT() { return getToken(CalculatorParser.IDENTIFIANT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode FININSTRUCTION() { return getToken(CalculatorParser.FININSTRUCTION, 0); }
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculatorListener ) ((CalculatorListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculatorListener ) ((CalculatorListener)listener).exitDecl(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		try {
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				((DeclContext)_localctx).TYPE = match(TYPE);
				setState(67);
				((DeclContext)_localctx).IDENTIFIANT = match(IDENTIFIANT);
				setState(68);
				match(T__0);
				setState(69);
				((DeclContext)_localctx).expr = expr(0);
				setState(70);
				match(FININSTRUCTION);

							if( (((DeclContext)_localctx).TYPE!=null?((DeclContext)_localctx).TYPE.getText():null).equals("int") )
							{
								// int a = 5;
								// store the variable in the symbol table
								// push it on the stack
								// increase variable count
								incvarg_count();
								
								tablesSymboles.putVar((((DeclContext)_localctx).IDENTIFIANT!=null?((DeclContext)_localctx).IDENTIFIANT.getText():null), (((DeclContext)_localctx).TYPE!=null?((DeclContext)_localctx).TYPE.getText():null));
								((DeclContext)_localctx).code =  "PUSHI 0\n";
								_localctx.code += ((DeclContext)_localctx).expr.code;
								// get address of variable
								AdresseType at = tablesSymboles.getAdresseType((((DeclContext)_localctx).IDENTIFIANT!=null?((DeclContext)_localctx).IDENTIFIANT.getText():null));
								_localctx.code += "STOREG " + at.adresse + "\n";
							}
							else if( (((DeclContext)_localctx).TYPE!=null?((DeclContext)_localctx).TYPE.getText():null).equals("float") )
							{
								tablesSymboles.putVar((((DeclContext)_localctx).IDENTIFIANT!=null?((DeclContext)_localctx).IDENTIFIANT.getText():null), (((DeclContext)_localctx).TYPE!=null?((DeclContext)_localctx).TYPE.getText():null));
								((DeclContext)_localctx).code =  ((DeclContext)_localctx).expr.code;
								incfloatg_count();
							}
							else
							{
								try
								{
									throw new Exception("Unidentified type: " + (((DeclContext)_localctx).TYPE!=null?((DeclContext)_localctx).TYPE.getText():null));
								}
								catch( Exception e )
								{
									e.printStackTrace();
									System.exit(-1);
								}
							}
						
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				((DeclContext)_localctx).TYPE = match(TYPE);
				setState(74);
				((DeclContext)_localctx).IDENTIFIANT = match(IDENTIFIANT);
				setState(75);
				match(FININSTRUCTION);

							incvarg_count();
							((DeclContext)_localctx).code =  new String();
							// int a;
							// store the variable in the symbol table
							// push it on the stack
							tablesSymboles.putVar((((DeclContext)_localctx).IDENTIFIANT!=null?((DeclContext)_localctx).IDENTIFIANT.getText():null), (((DeclContext)_localctx).TYPE!=null?((DeclContext)_localctx).TYPE.getText():null));
							_localctx.code += "PUSHI 0\n";
						
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FonctionContext extends ParserRuleContext {
		public String code;
		public Token TYPE;
		public Token IDENTIFIANT;
		public ParamsContext params;
		public BlockContext block;
		public TerminalNode TYPE() { return getToken(CalculatorParser.TYPE, 0); }
		public TerminalNode IDENTIFIANT() { return getToken(CalculatorParser.IDENTIFIANT, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public FonctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fonction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculatorListener ) ((CalculatorListener)listener).enterFonction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculatorListener ) ((CalculatorListener)listener).exitFonction(this);
		}
	}

	public final FonctionContext fonction() throws RecognitionException {
		FonctionContext _localctx = new FonctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_fonction);

					int params_size = 0;
					((FonctionContext)_localctx).code =  new String();
					tablesSymboles.newTableLocale();
				
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			((FonctionContext)_localctx).TYPE = match(TYPE);
			setState(80);
			((FonctionContext)_localctx).IDENTIFIANT = match(IDENTIFIANT);

						// start by putting the function in the table of functions
						int func_label = nextLabel();
						// function name, label number, function type
						tablesSymboles.nouvelleFonction((((FonctionContext)_localctx).IDENTIFIANT!=null?((FonctionContext)_localctx).IDENTIFIANT.getText():null), func_label, (((FonctionContext)_localctx).TYPE!=null?((FonctionContext)_localctx).TYPE.getText():null));
						// add label to the function
						_localctx.code += "LABEL " + func_label + "\n";
					
			setState(82);
			match(T__1);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TYPE) {
				{
				setState(83);
				((FonctionContext)_localctx).params = params();

					  			_localctx.code += ((FonctionContext)_localctx).params.code;
					  			params_size = ((FonctionContext)_localctx).params.size;
					  		
				}
			}

			setState(88);
			match(T__2);
			setState(89);
			((FonctionContext)_localctx).block = block();
